<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        tools:context="com.mrwii.ruler.MainActivity">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_size_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_size_10"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_info"/>

        <TextView
            android:id="@+id/tv_size_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_12"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_10"/>

        <TextView
            android:id="@+id/tv_size_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_14"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_12"/>

        <TextView
            android:id="@+id/tv_size_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/tv_size_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_14"/>

        <TextView
            android:id="@+id/tv_size_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_16"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_default"/>

        <TextView
            android:id="@+id/tv_size_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_18"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_16"/>

        <TextView
            android:id="@+id/tv_size_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_20"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_18"/>

        <TextView
            android:id="@+id/tv_size_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_25"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_20"/>

        <TextView
            android:id="@+id/tv_size_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_30"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_25"/>

        <TextView
            android:id="@+id/tv_size_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_size_40"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_30"/>

        <TextView
            android:id="@+id/tv_size_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:text="@string/tv_size_50"
            android:textSize="50sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_40"/>

        <TextView
            android:id="@+id/tv_size_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/tv_size_100"
            android:textSize="100sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_50"/>

        <FrameLayout
            android:id="@+id/view_100x100dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/bitmap_100x100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_size_100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/view_in_100_dp"
                android:textColor="@android:color/white"/>
        </FrameLayout>

        <TextView
            android:id="@+id/label_bitmap_info_mdpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_bitmap_info_mdpi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_100x100dp"/>

        <ImageView
            android:id="@+id/bitmap_mdpi_100x100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/bitmap_mdpi_100x100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_bitmap_info_mdpi"/>

        <TextView
            android:id="@+id/label_bitmap_info_drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_bitmap_info_drawable"
            app:layout_constraintStart_toEndOf="@+id/bitmap_mdpi_100x100"
            app:layout_constraintTop_toBottomOf="@+id/view_100x100dp"/>

        <ImageView
            android:id="@+id/bitmap_100x100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/bitmap_100x100"
            app:layout_constraintStart_toEndOf="@+id/bitmap_mdpi_100x100"
            app:layout_constraintTop_toBottomOf="@+id/label_bitmap_info_drawable"/>

        <TextView
            android:id="@+id/label_bitmap_info_hdpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_bitmap_info_hdpi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bitmap_mdpi_100x100"/>

        <ImageView
            android:id="@+id/bitmap_hdpi_100x100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/bitmap_hdpi_100x100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_bitmap_info_hdpi"/>

        <TextView
            android:id="@+id/label_bitmap_info_xhdpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_bitmap_info_xhdpi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bitmap_hdpi_100x100"/>

        <ImageView
            android:id="@+id/bitmap_xhdpi_100x100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/bitmap_xhdpi_100x100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_bitmap_info_xhdpi"/>

        <TextView
            android:id="@+id/label_bitmap_info_xxhdpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_bitmap_info_xxhdpi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bitmap_xhdpi_100x100"/>

        <ImageView
            android:id="@+id/bitmap_xxhdpi_100x100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/bitmap_xxhdpi_100x100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_bitmap_info_xxhdpi"/>

        <TextView
            android:id="@+id/label_bitmap_info_xxxhdpi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_bitmap_info_xxxhdpi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bitmap_xxhdpi_100x100"/>

        <ImageView
            android:id="@+id/bitmap_xxxhdpi_100x100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            android:src="@drawable/bitmap_xxxhdpi_100x100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_bitmap_info_xxxhdpi"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>